<resources>
    <string name="app_name">Apartment_Rental_Application</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="title">Title</string>
    <string name="Price">Price</string>
    <string name="more">more...</string>
    <string name="Register">Register</string>
    <string name="UploadPhoto">Upload Photo</string>
    <string name="Name">Name</string>
    <string name="Birthday">Birthday (dd/mm/yy)</string>
    <string name="Address">Address</string>
    <string name="Password">Password</string>
    <string name="As_Tenant">As Tenant</string>
    <string name="As_Renter">As Renter</string>
    <string name="CREATE_PROFILE">CREATE PROFILE</string>
    <string name="CREATE_ACCOUNT">CREATE ACCOUNT</string>
    <string name="LOG_IN">LOG IN</string>
    <string name="BROWSE_RENTALS">BROWSE RENTALS</string>
    <string name="TermsConditions">By using apartment rentals you are agreeing to our Terms and Privacy Policy</string>
    <string name="Messages">Messages</string>
    <string name="SignIn_Register">Sign In/ Register</string>
    <string name="Email">Email</string>
    <string name="Forgot_Password">Frogot Password?</string>
    <string name="Title">Title</string>
    <string name="Description">Description:</string>
    <string name="Text">Text</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Admin_Page">Admin Page</string>
    <string name="Logout">Logout</string>
    <string name="Renter_page">Renter Page</string>
    <string name="Tenant_Page">Tenant Page</string>
    <string name="PostApartments">Post Apartments</string>
    <string name="PostedApartments">Posted Apartments</string>
    <string name="ViewApartment">View All Apartments</string>
</resources>