<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <ImageView
            android:id="@+id/Register_Image"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:src="@drawable/output"
            android:layout_weight="1"
            ></ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textSize="35dp"
        android:layout_weight="1"
        android:textColor="#F17A0A"
        >
    </TextView>
    </LinearLayout>

    <EditText
        android:id="@+id/Register_name"
        android:textStyle="bold"
        android:hint="@string/Name"
        android:layout_marginTop="20dp"
        android:textColor="#F17A0A"
        android:textSize="22dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:id="@+id/Register_phone"
        android:textStyle="bold"
        android:hint="@string/PhoneNumber"
        android:layout_marginTop="20dp"
        android:textColor="#F17A0A"
        android:textSize="22dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:id="@+id/Register_Email"
        android:textStyle="bold"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"

        android:layout_marginTop="20dp"
        android:textColor="#F17A0A"
        android:textSize="22dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:id="@+id/Register_password"
        android:textStyle="bold"
        android:hint="@string/Password"
        android:layout_marginTop="20dp"
        android:textColor="#F17A0A"
        android:textSize="22dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        >
        <CheckBox
            android:id="@+id/Register_tenant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/As_Tenant"
            android:layout_marginLeft="20dp"
            android:textSize="22dp"
            android:textColor="?android:attr/colorFocusedHighlight"
            ></CheckBox>
        <CheckBox
            android:id="@+id/Register_renter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/As_Renter"
            android:textColor="?android:attr/colorFocusedHighlight"
            android:textSize="22dp"
            ></CheckBox>
    </LinearLayout>
    <Button
        android:id="@+id/Register_BTN"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/CREATE_PROFILE"
        android:layout_gravity="center"
        android:background="?android:attr/colorFocusedHighlight"
        app:backgroundTint="@color/black"
        app:backgroundTintMode="add"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="388dp" />

</LinearLayout>