<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/input_design"
    android:orientation="vertical"
    tools:context=".Renterlogin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="70dp"
        android:background="@drawable/output" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:text="@string/CREATE_ACCOUNT"
            android:textColor="@color/black"
            app:backgroundTint="?android:attr/colorActivatedHighlight"
            app:backgroundTintMode="src_over"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="269dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_design"
            android:text="@string/LOG_IN"
            android:textColor="?android:attr/colorFocusedHighlight"
            app:backgroundTint="@color/black"
            app:backgroundTintMode="add"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="388dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/BROWSE_RENTALS"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/TermsConditions"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>




</LinearLayout>