<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Renter_Home">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Logout"
        android:id="@+id/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@mipmap/splash_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageButton>

    <TextView
        android:id="@+id/renterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:fontFamily="@font/aclonica"
        android:text="Renter"
        android:textColor="#2196F3"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageButton
        android:id="@+id/postHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="136dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_baseline_post_add_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButton"></ImageButton>

    <ImageButton
        android:id="@+id/postedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_baseline_apartment_24"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/postHomeButton"></ImageButton>

    <ImageButton
        android:id="@+id/viewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_baseline_preview_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postedButton"></ImageButton>

    <TextView
        android:id="@+id/textPost"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/PostApartments"
        android:textColor="#2196F3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/postButton"
        app:layout_constraintTop_toBottomOf="@+id/renterTitle" />

    <TextView
        android:id="@+id/textPosted"
        android:layout_width="197dp"
        android:layout_height="82dp"
        android:layout_marginBottom="264dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/PostedApartments"
        android:textColor="#2196F3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toEndOf="@+id/postedButton" />

    <TextView
        android:id="@+id/tapartmentView"
        android:layout_width="227dp"
        android:layout_height="75dp"
        android:layout_marginBottom="112dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/ViewApartment"
        android:textColor="#2196F3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/viewButton" />

</androidx.constraintlayout.widget.ConstraintLayout>